# remembr

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  docker-compose.yaml  pyproject.toml
.claw/: settings.json
.claw/skills/: remembr-navigation.md
script/: install_nav2_deps.sh  install_remembr_deps.sh  setup.sh  setup_ros2.sh
src/agent/: package.xml  setup.cfg  setup.py
src/agent/agent/: __init__.py  remembr_agent.py
src/agent/agent/config/: __init__.py  agent_config.py
src/agent/agent/graph/: __init__.py  builder.py  nodes.py
src/agent/agent/models/: __init__.py  agent_output.py  agent_state.py  protocols.py
src/agent/agent/prompts/: agent_gen_system_prompt.txt  agent_system_prompt.txt
src/agent/agent/scripts/: __init__.py  navqa_evaluator.py
src/agent/agent/services/: __init__.py  agent_service.py  functions_wrapper.py  service_factory.py
src/agent/agent/tools/: __init__.py  search_tools.py
src/agent/agent/utils/: __init__.py  file_utils.py  parser_utils.py  ranking_utils.py  type_utils.py
src/agent/test/: test_service_factory.py
src/agent_msgs/: CMakeLists.txt  package.xml
src/agent_msgs/srv/: Query.srv
src/memory/: package.xml  setup.cfg  setup.py
src/memory/memory/: captioner.py  captioner_once.py
src/memory/memory/config/: captioner_config.py
src/memory/memory/models/: image_segment.py  pose_data.py
src/memory_msgs/: CMakeLists.txt  package.xml
src/memory_msgs/msg/: CaptionWithPose.msg
src/milvus/: package.xml  setup.cfg  setup.py
src/milvus/milvus/: __init__.py  memory_builder.py
src/qdrant/: package.xml  setup.cfg  setup.py
src/qdrant/db/: raft_state.json
src/qdrant/qdrant/: memory_builder.py
src/qdrant/test/: test_qdrant_package.py
src/remembr_mcp/: package.xml  setup.cfg  setup.py
src/remembr_mcp/remembr_mcp/: __main__.py  config.py  ros_publisher.py  server.py
src/remembr_mcp/test/: conftest.py  test_config.py  test_ros_publisher.py  test_server.py
src/tb3_nav_bringup/: package.xml  setup.cfg  setup.py
src/tb3_nav_bringup/launch/: tb3_simulation_launch.py  waypoint_patrol_with_bag_launch.py
src/tb3_nav_bringup/maps/: small_house.yaml
src/tb3_nav_bringup/tb3_nav_bringup/: patrol_waypoints.py  query_navigator.py  waypoint_patrol.py
src/tb3_nav_bringup/worlds/: small_house.world
src/vila/: package.xml  setup.cfg  setup.py
src/vila/llava/: conversation.py
src/vila/vila/: __init__.py  captioner.py
src/vila_msgs/: CMakeLists.txt  package.xml
src/vila_msgs/msg/: CaptionWithPose.msg
(+138 files in other folders)
