[project]
name = "remembr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "catkin-pkg>=1.1.0",
    "datasets>=4.2.0",
    "deepspeed>=0.17.6",
    "empy==3.3.4",
    "flash-attn>=2.8.3",
    "hydra-core>=1.3.2",
    "lark>=1.3.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "ps3-torch>=0.1.1",
    "pymilvus[milvus-lite]>=2.6.3",
    "s2wrapper",
    "sentence-transformers>=5.1.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.46.0",
]

[tool.uv.sources]
s2wrapper = { git = "https://github.com/bfshi/scaling_on_scales" }
