[project]
name = "remembr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "remembr[vila]",
    "remembr[milvus]",
    "setuptools>=80.10.1",
]

[project.optional-dependencies]
vila = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "deepspeed>=0.18.4",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "pillow>=12.1.0",
    "ps3-torch>=0.1.1",
    "s2wrapper>=0.1",
    "transformers==4.46.0",
    "triton==3.1.0",
]

milvus = [
    "langchain-huggingface>=1.2.0",
    "pymilvus[milvus-lite]>=2.6.6",
    "sentence-transformers>=5.2.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "wheel"]

[tool.uv.sources]
s2wrapper = { git = "https://github.com/bfshi/scaling_on_scales" }
