[project]
name = "remembr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
]

[project.optional-dependencies]
memory = [
    "Pillow",
    "httpx",
    "opencv-python",
]

qdrant = [
    "httpx",
    "qdrant-client",
]
