<?xml version="1.0"?>
<package format="3">
  <name>remembr_mcp</name>
  <version>0.1.0</version>
  <description>ROS2 MCP server for ReMEmbR agent</description>
  <maintainer email="aswoo55555@gmail.com">SunoopDogg</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
